# OpenWize-Up

./: .cproject  .gitignore  .gitmodules  .project  .readthedocs.yaml  CMakeLists.txt  LICENCE  README.md  README.rst
docs/: Doxyfile  OpenWize-Up.rst  build_doc.md  conf.py  doc.h  index.rst  welcome.rst
docs/api_doc/: index.rst  openwize-up.rst
docs/appendix/: debug_probe.rst  help_ide.rst  index.rst  install_ide.rst  setup.rst  test_tools.rst
docs/getting_started/: extend.rst  first_step.rst  go_further.rst  index.rst
sources/: Bootstrap.cmake  OpenWizeUp_Options.cmake  STM32HALConfig.cmake  WizeUp.cmake  app_img.cmake
sources/app/: CMakeLists.txt
sources/app/ATCI/: CMakeLists.txt
sources/app/ATCI/include/: atci.h  atci_get_cmd.h  atci_resp.h  console.h
sources/app/ATCI/src/: atci.c  atci_get_cmd.c  atci_resp.c  console.c
sources/app/cfg/: DefaultParams.xml  DefaultRestr.xml  ExtendParams.xml  LANParams.xml  LoggerParams.xml  LowPowerParams.xml  MergedParam.xml  TestModeParams.xml  WizeCoreExtendParams.xml
sources/app/extra/: CMakeLists.txt  phy_test.c  phy_test.h
sources/app/extra/exp/include/: always_on.h
sources/app/extra/exp/src/: always_on.c
sources/app/extra/itf/include/: itf.h  local_frm.h  phy_test.h  wize_app_itf.h
sources/app/extra/itf/src/: itf.c  local_frm.c  phy_test.c  wize_app_itf.c
sources/app/extra/local_itf/include/: local_frm.h  local_itf.h
sources/app/extra/local_itf/src/: local_frm.c  local_itf.c
sources/app/extra/phy_test/include/: phy_test.h
sources/app/extra/phy_test/src/: phy_test.c
sources/app/extra/simple_at/include/: at_access_param.h  at_command.h  at_extend_cmd.h  at_key_cmd.h  at_lo_update_cmd.h  at_test_cmd.h  at_wize_cmd.h
sources/app/extra/simple_at/src/: at_access_param.c  at_command.c  at_extend_cmd.c  at_key_cmd.c  at_lo_update_cmd.c  at_test_cmd.c  at_wize_cmd.c
sources/app/include/: app_entry.h  storage.h  wize_banner.h
sources/app/nvm/: nvm_area.c  nvm_area.h  nvm_sections.ld  storage_mapping.txt
sources/app/src/: app_entry.c  storage.c
sources/app/sys/: default_device_config.c  default_device_config.h  port.c  rtos.c  sys_init.c
sources/app/update/: update.c  update.h  update_area.c  update_area.h
sources/board/: CMakeLists.txt
sources/board/include/: main.h  stm32l4xx_it.h
sources/board/ld/: STM32L451CEUX_FLASH.ld  STM32L451CEUX_def.ld  definition.ld  sections.ld
sources/board/src/: main.c  stm32l4xx_hal_hires_time.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
sources/bootstrap/: CMakeLists.txt  STM32HALConfig.cmake  memory_mapping.txt
sources/bootstrap/img/include/: img.h  magic_def.h
sources/bootstrap/img/ld/: definition.ld
sources/bootstrap/img/src/: wrap_system.c
sources/bootstrap/include/: bootstrap.h  crc.h  def.h  flash.h  preload.h  protect.h  swap.h  trace.h  uart.h  wdg.h
sources/bootstrap/ld/: STM32L451CEUX_def.ld  alias.ld  boot.ld  definition.ld
sources/bootstrap/src/: bootstrap.c  crc.c  exception.c  flash.c  preload.c  protect.c  swap.c  trace.c  uart.c  wdg.c
sources/bootstrap/startup/: startup_stm32l4xx.s
sources/bsp/: CMakeLists.txt
sources/bsp/include/: bsp.h  bsp_boot.h  bsp_cal.h  bsp_crc.h  bsp_flash.h  bsp_gpio.h  bsp_gpio_it.h  bsp_hires_tmr.h  bsp_i2c.h  bsp_lp.h  bsp_lptimer.h  bsp_pwrlines.h  bsp_rtc.h  bsp_spi.h  bsp_uart.h  bsp_wdg.h  common.h  pin_cfg.h  platform.h
sources/bsp/src/: bsp.c  bsp_boot.c  bsp_cal.c  bsp_crc.c  bsp_flash.c  bsp_gpio.c  bsp_gpio_it.c  bsp_hires_tmr.c  bsp_i2c.c  bsp_lp.c  bsp_lptimer.c  bsp_pwrlines.c  bsp_rtc.c  bsp_spi.c  bsp_uart.c  bsp_wdg.c  fault_handler.c  platform.c  sys_handler.c  syscalls.c
sources/device/Adf7030/: CMakeLists.txt
sources/device/Adf7030/adf7030-1/include/: adf7030-1__cfg.h  adf7030-1__common.h  adf7030-1__gpio.h  adf7030-1__irq.h  adf7030-1__mem.h  adf7030-1__patch.h  adf7030-1__spi.h  adf7030-1__state.h  adf7030-1__trig.h  adf7030-1_fw_macro.h  adf7030-1_hw_macro.h  adf7030-1_reg.h
sources/device/Adf7030/adf7030-1/src/: adf7030-1__cfg.c  adf7030-1__gpio.c  adf7030-1__irq.c  adf7030-1__mem.c  adf7030-1__patch.c  adf7030-1__spi.c  adf7030-1__state.c  adf7030-1__trig.c
sources/device/Adf7030/conf/: WM2400_small.cfg  WM4800_small.cfg  WM6400_small.cfg  WM_base.cfg
sources/device/Adf7030/include/: adf7030-1_phy.h  adf7030-1_phy_conv.h  adf7030-1_phy_fw.h  adf7030-1_phy_hw.h  adf7030-1_phy_log.h  adf7030-1_phy_luts.h  adf7030-1_phy_packet.h  adf7030-1_phy_profile.h  phy_layer_private.h
sources/device/Adf7030/src/: adf7030-1_phy.c  adf7030-1_phy_conv.c  adf7030-1_phy_log.c  phy_layer.c
sources/device/FlashStorage/include/: flash_storage.h
sources/device/FlashStorage/src/: flash_storage.c
tools/build_support/: Doxyfile  project_support-config.cmake  version.in
tools/help/: custom-config.cmake
tools/scripts/: help_AT.sh  img_gen.sh  twk_load_jlink.sh  twk_load_stlink.sh
